style.css
* {
  margin: 0;
  padding: 0;
}

/*PAGE SECTIONS*/
body {
  color: #444;
  font-family: sans-serif;
  border-top: 10px solid #1098ad;
}

.container {
  width: 700px;
  margin: 0 auto;
}

.main-header {
  background-color: #f7f7f7;
  padding: 20px 40px; /*20 is vertical and 40 is horizontal*/
  margin-bottom: 60px;
}

aside {
  background-color: #f7f7f7;
  border-top: 5px solid #1098ad;
  border-bottom: 5px solid #1098ad;
  padding: 50px 0;
  width: 500px;
}

nav {
  font-size: 18px;
}

article {
  margin-bottom: 60px;
}

/*SMALLER ELEMENTS*/
h1,
h2,
h3 {
  color: #1098ad;
}

h1 {
  font-size: 26px;

  text-transform: uppercase;
  font-style: italic;
}

h2 {
  font-size: 40px;
  margin-bottom: 30px;
}

h3 {
  font-size: 30px;
  margin-bottom: 20px;
  margin-top: 40px;
}

h4 {
  font-size: 20px;

  text-transform: uppercase;
  text-align: center;
}

li {
  font-size: 20px;
  margin-bottom: 10px;
}

li:last-child {
  margin-bottom: 0;
}

p {
  font-size: 22px;
  line-height: 1.5;
  margin-bottom: 15px;
}

ul,
ol {
  margin-left: 50px;
  margin-bottom: 20px;
}

#author {
  font-style: italic;
  font-size: 18px;
}

#copyright {
  font-size: 16px;
}

.related-author {
  font-size: 18px;
  font-weight: bold;
}

.related {
  list-style: none;
}

.post-header {
  margin-bottom: 40px;
}

li:first-child {
  font-weight: bold;
}

li:last-child {
  font-style: italic;
}

/* li:nth-child(odd){  can also specify 3,4,etc
  color: red;
} */

/* this will not work cuz p is not the 1st child of article,
1st child is header */
article p:first-child {
  color: red;
}

a:link {
  color: #1098ad;
  text-decoration: none;
}

a:visited {
  color: #1098ad;
}

a:hover {
  color: orangered;
  font-weight: bold;
  text-decoration: underline orangered;
}

a:active {
  background-color: black;
  font-style: italic;
}

.post-img {
  width: 100%; /*this is percentage of the parents element*/
  height: auto;
}

nav a:link {
  display: inline-block;
  margin-right: 30px;
  margin-top: 10px;
}

nav a:link:last-child {
  margin-right: 0;
}

button {
  font-size: 22px;
  padding: 20px;
  cursor: pointer;

  position: absolute;
  bottom: 50px;
  right: 50px;
}

